--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -96,7 +96,8 @@
                                                 <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/3ojos.svg" alt="3ojos" width="30" height="30" style="border-radius: 150px"/>
                                                 <span class="cat-txt ">#{actividadModelo.nivelLenguaje}</span>
                                                 <span class="uk-text-center">#{actividadModelo.tema}</span>
-                                                <h:outputText pt:uk-icon="icon : users" pt:uk-tooltip="Assignment #{actividadModelo.totalTareas}"/>
+                                                <h:outputText rendered="#{actividadModelo.totalTareas ne null}" pt:uk-icon="icon : users" pt:uk-tooltip="#{actividadModelo.totalTareas} times  assigned."/>
+                                                <h:outputText rendered="#{actividadModelo.totalTareas eq null}" pt:uk-icon="icon : users" pt:uk-tooltip="No assigned."/>
                                             </div>
                                             <div class="uk-width-auto uk-text-right uk-text-muted">
                                                 <input type="radio" name="#{actividadModelo.nivelLenguaje}" class="uk-radio" value="#{actividadModelo.idActividad}"/>
@@ -138,7 +139,7 @@
                                                 </div>
                                             </div>
                                             <div class="uk-inline uk-text-center">
-                                                <button data-uk-tooltip="title: #{profesor['think-develop.and.share']}" uk-icon="icon: file-edit"/>
+                                                <button  uk-icon="icon: file-edit"/>
                                                 <div uk-dropdown="">
                                                     <ul class="uk-nav uk-dropdown-nav">
 
@@ -158,6 +159,7 @@
             <script type="text/javascript">
                 let letrero = "#{profesor['you.need.to.select.an.activity']}";
                 let confirmacion = "#{profesor['modal.confirma']}";
+                let descargableMapa = "#{profesor['think-develop.and.share']}"
             </script>
         </ui:define>
         <ui:define name="file-js">
