se traducen texto en gramatica y dashboard

--- a/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-gramatica.xhtml
@@ -109,6 +109,7 @@
            let regular = "#{profesor['regular']}";
            let bueno = "#{profesor['good']}";
            let excelente = "#{profesor['excellent']}";
+           const termina = "#{profesor['msj.termina']}";
         </script>
         <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/gramatica.js"></script>
     </ui:define>
