--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -289,7 +289,7 @@
                     <h3>level up</h3>
                 </div>
                 <div class="modal-cuerpo" style="display: flex; align-items: center; justify-content: center;" >
-                    <span style="font-size: 20px; font-weight: 900;" >Are you sure you want to move this student up? Not all level activities have been accomplished.</span>
+                    <span style="font-size: 20px; font-weight: 900;" >#{profesor['sube.nivel']}</span>
                 </div>
                 <div class="modal-pie">
                     <button class="boton-escuadron-base uk-margin-small-right" style="background-color: var(--azul-primary-color)" >level up</button>
