--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -96,8 +96,7 @@
                                                 <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/3ojos.svg" alt="3ojos" width="30" height="30" style="border-radius: 150px"/>
                                                 <span class="cat-txt ">#{actividadModelo.nivelLenguaje}</span>
                                                 <span class="uk-text-center">#{actividadModelo.tema}</span>
-                                                <h:outputText rendered="#{actividadModelo.totalTareas ne null}" pt:uk-icon="icon : users" pt:uk-tooltip="#{actividadModelo.totalTareas} times  assigned."/>
-                                                <h:outputText rendered="#{actividadModelo.totalTareas eq null}" pt:uk-icon="icon : users" pt:uk-tooltip="No assigned."/>
+                                                <h:outputText rendered="#{actividadModelo.totalTareas ne null}" pt:uk-icon="icon : users" pt:uk-tooltip="#{actividadModelo.totalTareas} -times assigned."/>
                                             </div>
                                             <div class="uk-width-auto uk-text-right uk-text-muted">
                                                 <input type="radio" name="#{actividadModelo.nivelLenguaje}" class="uk-radio" value="#{actividadModelo.idActividad}"/>
