estilos dropdown en vista admin alumnos

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -154,7 +154,7 @@
                                         <li>
                                             <h:link outcome="asignar-tarea">
                                                 <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/gramatica.svg" alt="gramatica" width="20"/>
-                                                <span class="uk-text-middle uk-text-primary"><h:outputText value="#{profesor['assign.activity.title']}"/></span>
+                                                <span class="uk-text-middle uk-text-primary uk-margin-small-left"><h:outputText value="#{profesor['assign.activity.title']}"/></span>
                                                 <f:param name="alumno" value="#{tareaAlumnoGrupoModelo.id}"/>
                                                 <f:param name="grupo" value="#{grupoAlumnoControlador.idGrupo}"/>
                                             </h:link>
