se modificaron los archivos locales por los que apuntan al storage

--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -332,8 +332,7 @@
             var genderAlum = "#{profesor['csv.gender']}";
         </script>
         <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/nah.js"></script>
-<!--        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumnos-csv.js"></script>-->
-        <h:outputScript library="js" name="/profesor/agregar-alumnos-csv.js"/>
+        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumnos-csv.js"></script>
         <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumno-modal.js"></script>
     </ui:define>
 </ui:composition>
