se le pone um max-length al mapa mental-15

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
@@ -84,7 +84,8 @@
                                     <div class="uk-form-controls">
                                         <h:inputText styleClass="uk-input"
                                                      value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                                     id="definicion">
+                                                     id="definicion"
+                                                     maxlength="26">
                                             <f:validateRequired/>
                                         </h:inputText>
                                         <h:message for="definicion" style="color: white"/>
@@ -95,7 +96,8 @@
                                     <div class="uk-form-controls">
                                         <h:inputText styleClass="uk-input"
                                                      value="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
-                                                     id="sentencia">
+                                                     id="sentencia"
+                                                     maxlength="26">
                                             <f:validateRequired/>
                                         </h:inputText>
                                         <h:message for="sentencia" style="color: white"/>
@@ -106,7 +108,8 @@
                                     <div class="uk-form-controls">
                                         <h:inputText styleClass="uk-input"
                                                      value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                                     id="spreech">
+                                                     id="spreech"
+                                                     maxlength="26">
                                             <f:validateRequired/>
                                         </h:inputText>
                                         <h:message for="spreech" style="color: white"/>
@@ -137,7 +140,8 @@
                                     <div class="uk-form-controls">
                                         <h:inputText styleClass="uk-input"
                                                      value="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].respuesta}"
-                                                     id="subfijo">
+                                                     id="subfijo"
+                                                     maxlength="17">
                                             <f:validateRequired/>
                                         </h:inputText>
                                         <h:message for="subfijo" style="color: white"/>
@@ -150,7 +154,8 @@
                                     <div class="uk-form-controls">
                                         <h:inputText styleClass="uk-input"
                                                      value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
-                                                     id="prefijo">
+                                                     id="prefijo"
+                                                     maxlength="26">
                                             <f:validateRequired/>
                                         </h:inputText>
                                         <h:message for="prefijo" style="color: white"/>
@@ -163,7 +168,8 @@
                                     <div class="uk-form-controls">
                                         <h:inputText styleClass="uk-input"
                                                      value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
-                                                     id="raiz">
+                                                     id="raiz"
+                                                     maxlength="15">
                                             <f:validateRequired/>
                                         </h:inputText>
                                         <h:message for="raiz" style="color: white"/>
@@ -176,7 +182,8 @@
                                     <div class="uk-form-controls">
                                         <h:inputText styleClass="uk-input"
                                                      value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                                     id="contexto">
+                                                     id="contexto"
+                                                     maxlength="41">
                                             <f:validateRequired/>
                                         </h:inputText>
                                         <h:message for="contexto" style="color: white"/>
@@ -189,7 +196,8 @@
                                     <div class="uk-form-controls">
                                         <h:inputText styleClass="uk-input"
                                                      value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                                     id="nueva-palabra">
+                                                     id="nueva-palabra"
+                                                     maxlength="34">
                                             <f:validateRequired/>
                                         </h:inputText>
                                         <h:message for="nueva-palabra" style="color: white"/>
@@ -203,7 +211,8 @@
                                         <h:inputText value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                                      id="entrada-antonimo"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                     styleClass="uk-input">
+                                                     styleClass="uk-input"
+                                                     maxlength="26">
                                             <f:validateRequired/>
                                         </h:inputText>
                                     </div>
