se agrega un checkbox en la asignacion de actividad por grupo

--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -99,6 +99,10 @@
                                             </div>
                                             <div class="uk-width-auto uk-text-right uk-text-muted">
                                                 <input type="radio" name="#{actividadModelo.nivelLenguaje}" class="uk-radio" value="#{actividadModelo.idActividad}"/>
+
+                                            </div>
+                                            <div>
+                                                <input class="uk-checkbox" type="checkbox"></input>
                                             </div>
                                         </h:panelGroup>
                                     </div>
