Ahora en la calificacion para un mapa mental viene con el comentario

--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -104,6 +104,7 @@
                             <h:panelGroup layout="block" styleClass="score uk-position-absolute " style="width: 200px; height: 200px; left: 55%; top: 50%; transform: translate(-50%, -50%);" rendered="#{mapaMental.totalResueltos gt 0 and not empty mapaMental.calificacion}">
                                 <span style="font-size: 22px"><h:outputText rendered="#{mapaMental.totalResueltos gt 0 and not empty mapaMental.calificacion}" value="Score: #{mapaMental.calificacion}%"/></span>
                             </h:panelGroup>
+                            #{mapaMental.comentario}
                         </div>
                     </ui:repeat>
                 </div>
