Cuando se asigna una tarea, ahora se puede asigna las respuestas

--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -75,6 +75,7 @@
                 <div class="uk-margin-medium-top uk-flex uk-flex-right regresa-asigna">
                     <h:form id="formulario-asignar-tarea">
                         <h:inputHidden id="input-actividad" value="#{asignarActividadControlador.actividad}"/>
+                        <h:inputHidden id="input-tarea" value="#{asignarActividadControlador.verTarea}"/>
                         <h:commandButton id="boton-enviar"
                                          action="#{asignarActividadControlador.asiganarTarea()}"
                                          value="#{profesor['activity.assign']}" styleClass="uk-button  uk-button-primary"
